[package]
name = "docbase_io"
version = "0.1.1"
authors = ["Pocket7878 <poketo7878@gmail.com>"]
description = "Docbase.io client"
readme = "README.md"
homepage = "https://github.com/pocket7878/docbase_cli"
repository = "https://github.com/pocket7878/docbase_cli"
documentation = "https://pocket7878.github.io/docbase_cli/docbase_io/index.html"
license = "Apache-2.0"

[[bin]]
name = "docbase_cli"

[dependencies]
hyper = "*"
reqwest = "0.8.2"
serde = "1.0.27"
serde_json = "*"
serde_derive = "*"
tempfile = "*"
getopts = "0.2.15"
